--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Campton-Bold";
-  src: url("/fonts/Campton Bold.otf");
+  src: url("../fonts/Campton Bold.otf");
 }
 @font-face {
   font-family: "Campton-Book";
-  src: url("/fonts/Campton Book.otf");
+  src: url("../fonts/Campton Book.otf");
 }
 * {
   font-family: Campton-Book, Helvetica, sans-serif;
@@ -243,7 +243,7 @@ p.yellow {
 }
 
 .gutbuddies-photo {
-  background-image: url("assets/projects/Asset 1pj.png");
+  background-image: url("../assets/projects/Asset 1pj.png");
   object-fit: contain;
   flex-shrink: 0;
   background-size: cover;
@@ -297,14 +297,14 @@ p.yellow {
 }
 
 .cats-photo {
-  background-image: url("assets/projects/Asset 3pj.png");
+  background-image: url("../assets/projects/Asset 3pj.png");
   object-fit: contain;
   flex-shrink: 0;
   background-size: cover;
 }
 
 .barbados-photo {
-  background-image: url("assets/projects/Asset 4pj.png");
+  background-image: url("../assets/projects/Asset 4pj.png");
   object-fit: contain;
   flex-shrink: 0;
   background-size: cover;
@@ -335,7 +335,7 @@ p.yellow {
 
 .secondary-photos {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
   padding: 0;
   margin: 0;
